# azure-service-bus

./: .env.example  README.md  pyproject.toml
src/: abstractions.py  auth.py  publisher.py  subscriber.py
